Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109564

Handle software backend more gracefully, not by crashing (Custominstancing, morphing & particles3d applications stopped unexpectedly, colibri-imx6ull)

    XMLWordPrintable

Details

    • 99557284a (dev), 8f9dce8a6 (6.5), e71e9c80b (6.4)

    Description

      linux-g++-Ubuntu20.04-x64_B2QT-colibri-imx6ull, win-msvc2019-Windows10-22H2-x64_B2QT-colibri-imx6ull and win-msvc2019-Windows11-22H2-x64_B2QT-colibri-imx6ull

      custominstancing
      http://qt-rta.ci.qt.io/job/RTA_b2qtHW_highlighted_examples/cfg=linux-g++-Ubuntu20.04-x64_B2QT-colibri-imx6ull/654/consoleFull

      FAIL 16:38:31 custominstancing application unexpectedly stopped (Screenshot taken from the desktop is invalid)
      WARNING 16:38:31 Attaching to application skipped. No hooks available for Qt6.5 colibri-imx6ull
      LOG 16:38:31 /home/qt/RTA/B2Qt_6.5.0/Examples/Qt-6.5.0/quick3d/custominstancing/custominstancing_run.log file contents:
      FAIL 16:38:31 Process stopped

      morphing
      LOG 16:41:23 morphing not running.
      FAIL 16:41:23 morphing application unexpectedly stopped (Screenshot taken from the desktop is invalid)
      WARNING 16:41:23 Attaching to application skipped. No hooks available for Qt6.5 colibri-imx6ull
      LOG 16:41:23 /home/qt/RTA/B2Qt_6.5.0/Examples/Qt-6.5.0/quick3d/morphing/morphing_run.log file contents:
      FAIL 16:41:23 Process stopped

      LOG 16:44:44 particles3d not running.
      FAIL 16:44:44 particles3d application unexpectedly stopped (Screenshot taken from the desktop is invalid)
      WARNING 16:44:45 Attaching to application skipped. No hooks available for Qt6.5 colibri-imx6ull
      LOG 16:44:45 /home/qt/RTA/B2Qt_6.5.0/Examples/Qt-6.5.0/quick3d/particles3d/particles3d_run.log file contents:
      FAIL 16:44:45 Process stopped

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            mierala Minna Erälä
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change