Handle software backend more gracefully

Print a useful warning when the QQuickWindow's rendering is not based on
a 3D API and QRhi. Then handle the possibility of the scene renderer
being null in some places.

Fixes: QTBUG-109564
Pick-to: 6.5 6.4 6.2
Change-Id: Ic32909e3b1c7b91b8e4dc3291af7421d438f8e00
Reviewed-by: Christian Strømme <christian.stromme@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>